<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideoUploadActivity">

    <RelativeLayout
        android:id="@+id/post_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:visibility="gone"
        tools:visibility="visible">

        <EditText
            android:id="@+id/post_caption_input"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_margin="10dp"
            android:gravity="top"
            android:hint="@string/caption"
            android:padding="10dp"
            android:layout_toStartOf="@id/post_thubmnail_view"/>

        <ImageView
            android:id="@+id/post_thubmnail_view"
            android:layout_width="90dp"
            android:layout_height="160dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:background="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/cancel_post_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_weight="1"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:visibility="gone"/>

            <Button
                android:id="@+id/submit_post_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post"
                android:layout_weight="1"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/upload_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/add_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:src="@drawable/icon_add"
            app:tint="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_icon"
            android:gravity="center"
            android:text="@string/click_to_upload" />

    </RelativeLayout>

</RelativeLayout>